#	$Id$	

Changelog for HylaFAX 4.2.1

* remove need to have separate "fax" user (22 Dec 2004)
* fix parsing of AT+FCLASS=? response within faxaddmodem
  and probemodem (21 Dec 2004)
* improve multi-line handling within notify (20 Dec 2004)
* improve trap handling in faxaddmodem/probemodem (17 Dec 2004)
* fix hfaxd from rejecting jobs scheduled for the past while
  the killtime is still in the future (15 Dec 2004)
* drop ftp links from received notification e-mail (8 Dec 2004)
* fix dial-and-answer feature (2 Dec 2004)
* add NSF recognition for MFC-3100C (29 Nov 2004)
* fix Class 1 support for services "0,1.0" (26 Nov 2004)
* limit hfaxd jobs cache size (23 Nov 2004)
* fix hfaxd ABOR command and trigger (23 Nov 2004)
* fix error when hfaxd FIFO fills (23 Nov 2004)
* document -age option for recvstats/xferfaxstats (23 Nov 2004)
* add coversheet information into the q-file (23 Nov 2004)
* fix documentation regarding DesiredEC (23 Nov 2004)
* change minsp to minbr for consistency (23 Nov, 2 Dec 2004)
* fix hfaxd problem with file descriptors (23 Nov 2004)
* fix hfaxd from dying on ECONNABORTED (23 Nov 2004)
* add -fpic to DSO build for non-x86 Linux (23 Nov 2004)
* add CALL records to xferfaxlog and LogCalls config (16 Nov 2004)
* fix/implement desireddf in faxsend and faxq (29 Oct 2004)
* fix the filetype output for JPARM DOCUMENTS (14 Oct 2004)
* add SHIELDED_DTMF option for CIDNumber (7 Oct 2004)
* add Class1Resolutions, deprecate Class1ExtendedRes (20 Sep 2004)
* fix a bug in notify when the job is killed (15 Sep 2004)
* initialize supplementary groups when switching
  uid (13 Sep, 8 Dec 2004)
* fix faxsend to retrain after receiving RTP (9 Sep 2004)
* fix tiffcheck unit comparison error (1 Sep 2004)
* fix misconfirmation of some ECM faxes (30 Aug 2004)
* add fax batching support to faxq (30 Aug, 9 Sep 2004)
* ignore garbage after sending TCF data (26 Aug 2004)
* fix truncation of filenames in faxcron (26 Aug 2004)