@@ -50,6 +50,14 @@ startup a server system.
 EOF
     exit 1
 }
+
+# These settings may not be present in setup.cache if user upgraded and
+# didn't re-run faxsetup; we set them before calling setup.cache for
+# backward compatibility.
+ENCODING=base64
+MIMENCODE=mimencode
+TTYCMD=tty
+
 . etc/setup.cache
 
 INFO=$SBIN/faxinfo
